--- a/modules/examples/project.properties
+++ b/modules/examples/project.properties
@@ -1,6 +1,6 @@
-module.name 		= abstraction-examples
-long.name 		= Various examples for the Java COG Kit abstraction layer
-version			= 2.1
+module.name 		= examples
+long.name 		= Various examples for the Java COG Kit
+version			= 2.2
 project			= Java CoG Kit
 lib.deps		= -
 debug 			= true
