--- a/src/cog/build.properties
+++ b/src/cog/build.properties
@@ -2,5 +2,7 @@
 #into the lib directory, regardless of whether they come
 #from an extra lib directory or not
 #Note: don't set it to false to disable. It won't do what you think it should.
+#This will also disable sandboxing on providers that do it. Make sure that
+#there are no conflicting providers when using this
 
-#merge.extra.libs=true
+merge.extra.libs=true
