the libexec dir also goes into the dist
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@32 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/build.xml
+++ b/build.xml
@@ -71,6 +71,10 @@
 		<copy todir="${dist.dir}/var">
 			<fileset dir="${cog.dir}/modules/${module.name}/var"/>
 		</copy>
+		<mkdir dir="${dist.dir}/libexec"/>
+		<copy todir="${dist.dir}/libexec">
+			<fileset dir="${cog.dir}/modules/${module.name}/libexec"/>
+		</copy>
 		<copy todir="${dist.dir}/bin">
 			<fileset dir="${cog.dir}/modules/${module.name}/bin"/>
 		</copy>
