--- a/etc/vdl2.properties
+++ b/etc/vdl2.properties
@@ -14,19 +14,12 @@ tc.file=${vds.home}/var/tc.data
 #
 lazy.errors=true
 
-
 #
-# false	- means that cleanups will be done after each job is done. 
-#		Use this if your workflow deals with very large datasets and
-#		you need to be careful about running out of disk space on
-#		remote resources.
-# true	- means that cleanup will be done at the end of the workflow.
-#		Use this to get better performance at the expense of remote
-#		disk usage.
+# What algorithm to use for caching of remote files. LRU (as in what
+# files to purge) is the only implementation right now. One can set
+# a target size for a host by using the VDL2::storageSize profile
+# for a host in sites.xml
 #
-lazy.cleanup=true
-
-
 caching.algorithm=LRU
 
 #
