--- a/etc/vdl2.properties
+++ b/etc/vdl2.properties
@@ -17,7 +17,7 @@ lazy.errors=true
 #
 # What algorithm to use for caching of remote files. LRU (as in what
 # files to purge) is the only implementation right now. One can set
-# a target size for a host by using the VDL2::storageSize profile
+# a target size for a host by using the VDL2::storagesize profile
 # for a host in sites.xml
 #
 caching.algorithm=LRU
@@ -27,6 +27,7 @@ caching.algorithm=LRU
 #			 choose a random file name)
 # false      - do not generate a provenance graph 
 # <filename> - generate a provenange graph in the give file name
+#
 pgraph=true
 
 
