--- a/etc/error.properties
+++ b/etc/error.properties
@@ -12,10 +12,11 @@ Check your tc.data and sites.xml files.
 ;
 
 Job (\S*) failed with an exit code of (\d*).*
-stderr.txt:\s*(.*)\n*
-stdout.txt:\s*(.*)\n*
+stderr.txt: \n *(.*)\n\s*
+stdout.txt: \n *(.*)\s*
+.*
 ->
-Application \1 failed (exit code: \2)\n
+Application "\1" failed (exit code: \2)\n
 \t\3\n
-\t\4
+\t\4\n
 ;
