git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@147 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/etc/error.properties
+++ b/etc/error.properties
@@ -3,6 +3,8 @@
 # 3. The regular expression is separated from the replacement by a line containing only "->"
 # 4. A replacement is separated from the next regexp by a line containing only ";"
 # 5. Whitespace (other than newlines) is not ignored (careful about extra spaces at the end of a line)
+# Note: The translator only translates the message of an exception and generally excludes the Karajan
+# stack trace.
 
 Could not find any valid host for task .* 
 with constraints \{trfqn=(.*), tr=(.*)\}
