--- a/etc/vdl2.properties
+++ b/etc/vdl2.properties
@@ -42,3 +42,30 @@ pgraph.graph.options=splines="compound", rankdir="TB"
 #
 pgraph.node.options=color="seagreen", style="filled"
 
+#
+# true	- clustering of small jobs is enabled. Clustering works in the 
+#       following way: If a job is clusterable (meaning that it has the
+#       GLOBUS::maxwalltime profile specified in tc.data and its value
+#       is less than the value of the "min.cluster.time" property) it will
+#       be put in a clustering queue. The queue is processed at intervals 
+#       specified by the "clustering.queue.delay" property. The processing
+#       of the clustering queue consists of selecting compatible jobs and
+#		grouping them in clusters whose max wall time does not exceed twice
+#       the value of the "min.cluster.time" property. Two or more jobs are 
+#       considered compatible if they share the same site and do not have
+#       conflicting profiles (e.g. different values for the same environment
+#       variable). 
+# false	- clustering of small jobs is disabled.
+#
+clustering.enabled=true
+
+
+#
+# <seconds>	- the intervals at which the clustering queue is processed
+#
+clustering.queue.delay=40
+
+#
+# <seconds>	- the threshold time for clustering
+#
+min.cluster.time=60
