--- a/etc/vdl2.properties
+++ b/etc/vdl2.properties
@@ -51,7 +51,7 @@ pgraph.node.options=color="seagreen", style="filled"
 #       specified by the "clustering.queue.delay" property. The processing
 #       of the clustering queue consists of selecting compatible jobs and
 #		grouping them in clusters whose max wall time does not exceed twice
-#       the value of the "min.cluster.time" property. Two or more jobs are 
+#       the value of the "clustering.min.time" property. Two or more jobs are 
 #       considered compatible if they share the same site and do not have
 #       conflicting profiles (e.g. different values for the same environment
 #       variable). 
@@ -63,9 +63,9 @@ clustering.enabled=true
 #
 # <seconds>	- the intervals at which the clustering queue is processed
 #
-clustering.queue.delay=40
+clustering.queue.delay=4
 
 #
 # <seconds>	- the threshold time for clustering
 #
-min.cluster.time=60
+clustering.min.time=60
