updated error stuff
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@182 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/etc/error.properties
+++ b/etc/error.properties
@@ -3,6 +3,9 @@
 # 3. The regular expression is separated from the replacement by a line containing only "->"
 # 4. A replacement is separated from the next regexp by a line containing only ";"
 # 5. Whitespace (other than newlines) is not ignored (careful about extra spaces at the end of a line)
+# 6. Inserting a matched group inside the replacement is done with \<groupindex> (i.e. \1, \2,...)
+# 7. Regular expression matching is done with DOTALL enabled. In other words the dot will match
+#    new lines.
 # Note: The translator only translates the message of an exception and generally excludes the Karajan
 # stack trace.
 
@@ -15,7 +18,7 @@ Check your tc.data and sites.xml files.
 
 Job (\S*) failed with an exit code of (\d*).*
 stderr.txt: \n *(.*)\n\s*
-stdout.txt: \n *(.*)\s*
+stdout.txt: \n *(.*)\s*\
 .*
 ->
 Application "\1" failed (exit code: \2)\n
