--- a/etc/error.properties
+++ b/etc/error.properties
@@ -17,8 +17,8 @@ Check your tc.data and sites.xml files.
 ;
 
 Job (\S*) failed with an exit code of (\d*).*
-stderr.txt: \n *(.*)\n\s*
-stdout.txt: \n *(.*)\s*\
+stderr.txt:\s*(.*)\n\s*
+stdout.txt:\s*(.*)\s*
 .*
 ->
 Application "\1" failed (exit code: \2)\n
