updated error translations
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@235 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/etc/error.properties
+++ b/etc/error.properties
@@ -6,22 +6,34 @@
 # 6. Inserting a matched group inside the replacement is done with \<groupindex> (i.e. \1, \2,...)
 # 7. Regular expression matching is done with DOTALL enabled. In other words the dot will match
 #    new lines.
-# Note: The translator only translates the message of an exception and generally excludes the Karajan
-# stack trace.
+#
 
 Could not find any valid host for task .* 
-with constraints \{trfqn=(.*), tr=(.*)\}
+with constraints \{trfqn=(.*), tr=(.*)\}.*
 ->
 The requested application (\2) cannot be found installed on any of the sites. 
 Check your tc.data and sites.xml files.
 ;
 
 Job (\S*) failed with an exit code of (\d*).*
-stderr.txt:\s*(.*)\n\s*
-stdout.txt:\s*(.*)\s*
+stderr.txt:\s*(.*)\s*/stderr.txt
+stdout.txt:\s*(.*)\s*/stdout.txt
 .*
 ->
 Application "\1" failed (exit code: \2)\n
 \t\3\n
 \t\4\n
+;
+
+The cache already contains (\S*)\..*
+->
+Multiple mappings poiting to the same file (\1) detected.
+;
+
+Could not initialize shared directory on (\S*).*
+Cannot
+#Cannot create directory (\S*).*Disk quota exceeded
+.*
+->
+Could not initialize shared directory on \1: Disk quota exceeded
 ;
