--- a/etc/error.properties
+++ b/etc/error.properties
@@ -8,32 +8,39 @@
 #    new lines.
 #
 
-Could not find any valid host for task .* 
+.*Could not find any valid host for task .* 
 with constraints \{trfqn=(.*), tr=(.*)\}.*
 ->
 The requested application (\2) cannot be found installed on any of the sites. 
 Check your tc.data and sites.xml files.
 ;
 
+Exception in (\S*):.*
+Arguments: \[(.*)\].*Host: (\S*).*Directory: (\S*).*stderr.txt:\s*(.*)\s*stdout.txt:\s*(.*)\s*----.*
 Job (\S*) failed with an exit code of (\d*).*
-stderr.txt:\s*(.*)\s*/stderr.txt
-stdout.txt:\s*(.*)\s*/stdout.txt
-.*
 ->
 Application "\1" failed (exit code: \2)\n
-\t\3\n
-\t\4\n
+\tArguments: "\2"\n\tHost: "\3"\n\tSTDERR: \5\n\tSTDOUT: \6\n
 ;
+
 
 The cache already contains (\S*)\..*
 ->
 Multiple mappings poiting to the same file (\1) detected.
 ;
 
-Could not initialize shared directory on (\S*).*
-Cannot
-#Cannot create directory (\S*).*Disk quota exceeded
+.*Could not initialize shared directory on (\S*).*
+Cannot create directory (\S*).*Disk quota exceeded
 .*
 ->
 Could not initialize shared directory on \1: Disk quota exceeded
+;
+
+Exception in (\S*):.*
+Arguments: \[(.*)\].*Host: (\S*).*Directory: (\S*).*stderr.txt:\s*(.*)\s*stdout.txt:\s*(.*)\s*----.*
+Exception in getFile.*
+Unable to open file (\S*).*
+->
+Error retrieving file "\7"\n 
+\tApplication: "\1"\n\tArguments: "\2"\n\tHost: "\3"\n\tSTDERR: \5\n\tSTDOUT: \6\n
 ;
