added some errors
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@283 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/etc/error.properties
+++ b/etc/error.properties
@@ -8,18 +8,19 @@
 #    new lines.
 #
 
-.*Could not find any valid host for task .* 
+Could not find any valid host for task .* 
 with constraints \{trfqn=(.*), tr=(.*)\}.*
 ->
-The requested application (\2) cannot be found installed on any of the sites. 
-Check your tc.data and sites.xml files.
+The requested application (\2) cannot be found installed on any of the sites.\n  
+You should check your tc.data and sites.xml files, and make sure that the name (\2) is
+not misspelled.
 ;
 
 Exception in (\S*):.*
 Arguments: \[(.*)\].*Host: (\S*).*Directory: (\S*).*stderr.txt:\s*(.*)\s*stdout.txt:\s*(.*)\s*----.*
 Job (\S*) failed with an exit code of (\d*).*
 ->
-Application "\1" failed (exit code: \2)\n
+Application "\1" failed (exit code: \8)\n
 \tArguments: "\2"\n\tHost: "\3"\n\tSTDERR: \5\n\tSTDOUT: \6\n
 ;
 
@@ -33,7 +34,7 @@ Multiple mappings poiting to the same file (\1) detected.
 Cannot create directory (\S*).*Disk quota exceeded
 .*
 ->
-Could not initialize shared directory on \1: Disk quota exceeded
+Your disk quota on "\1" has been filled. Try cleaning up some files on "\1".
 ;
 
 Exception in (\S*):.*
@@ -43,4 +44,31 @@ Unable to open file (\S*).*
 ->
 Error retrieving file "\7"\n 
 \tApplication: "\1"\n\tArguments: "\2"\n\tHost: "\3"\n\tSTDERR: \5\n\tSTDOUT: \6\n
+;
+
+.*Proxy file \((\S*)\) not found.*
+->
+The GSI proxy certificate (\1) could not be found.\n
+Try running "grid-proxy-init".
+;
+
+.*Expired credentials detected.*
+->
+Your GSI proxy certificate has expired.\n
+Try running "grid-proxy-init".
+;
+
+Could not initialize shared directory on (\S*)
+.*Unknown CA.*
+->
+The system cannot verify the authenticity of host you are trying to use ("\1") (unknown CA).\n
+You should install the root certificate that was used to sign the host certificate 
+of "\1" in ~/.globus/certificates.\n
+;
+
+Could not initialize shared directory on (\S*)
+.*[Gg]ridmap lookup failure.*
+->
+Your certificate is not authorized to use "\1" (gridmap lookup failed).\n
+Please contact the system administrator of "\1".
 ;
