bug 8. failure in antlr build target will now cause whole build to fail
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@298 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/build.xml
+++ b/build.xml
@@ -108,7 +108,7 @@ updateOptions "$COG_INSTALL_PATH" "vds.home"
 	</target>
 	
 	<target name="antlr">
-		<java classname="antlr.Tool" fork="true">
+		<java classname="antlr.Tool" fork="true" failonerror="true">
 			<arg value="-o"/>
 			<arg value="${cog.dir}/modules/${module.name}/src/org/griphyn/vdl/parser"/>
 			<arg value="grammars/VDL.g"/>
