--- a/etc/error.properties
+++ b/etc/error.properties
@@ -18,9 +18,9 @@ not misspelled.
 
 Exception in (\S*):.*
 Arguments: \[(.*)\].*Host: (\S*).*Directory: (\S*).*stderr.txt:\s*(.*)\s*stdout.txt:\s*(.*)\s*----.*
-Job (\S*) failed with an exit code of (\d*).*
+Job failed with an exit code of (\d*).*
 ->
-Application "\1" failed (exit code: \8)\n
+Application "\1" failed (exit code: \7)\n
 \tArguments: "\2"\n\tHost: "\3"\n\tSTDERR: \5\n\tSTDOUT: \6\n
 ;
 
@@ -72,3 +72,4 @@ Could not initialize shared directory on (\S*)
 Your certificate is not authorized to use "\1" (gridmap lookup failed).\n
 Please contact the system administrator of "\1".
 ;
+
