sometimes there is a job name, sometimes there isn't
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@331 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/etc/error.properties
+++ b/etc/error.properties
@@ -18,7 +18,7 @@ not misspelled.
 
 Exception in (\S*):.*
 Arguments: \[(.*)\].*Host: (\S*).*Directory: (\S*).*stderr.txt:\s*(.*)\s*stdout.txt:\s*(.*)\s*----.*
-Job failed with an exit code of (\d*).*
+Job .*failed with an exit code of (\d*).*
 ->
 Application "\1" failed (exit code: \7)\n
 \tArguments: "\2"\n\tHost: "\3"\n\tSTDERR: \5\n\tSTDOUT: \6\n
