will this ever work properly?
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@341 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/etc/error.properties
+++ b/etc/error.properties
@@ -17,11 +17,23 @@ not misspelled.
 ;
 
 Exception in (\S*):.*
-Arguments: \[(.*)\].*Host: (\S*).*Directory: (\S*).*stderr.txt:\s*(.*)\s*stdout.txt:\s*(.*)\s*----.*
-Job .*failed with an exit code of (\d*).*
+Arguments: \[(.*)\].*Host: (\S*).*Directory: (\S*).*stderr.txt:\s*(.*)\s*stdout.txt:\s*(.*)\s*----\s*
+KickstartRecord: (\S*).*
+Caused by:\s*
+(.*)
 ->
-Application "\1" failed (exit code: \7)\n
-\tArguments: "\2"\n\tHost: "\3"\n\tSTDERR: \5\n\tSTDOUT: \6\n
+Application "\1" failed (\8)\n
+\tArguments: "\2"\n\tHost: \3\n\tDirectory: \4\n\tSTDERR: \5\n\tSTDOUT: \6\n
+\tKickstartRecord: \7
+;
+
+Exception in (\S*):.*
+Arguments: \[(.*)\].*Host: (\S*).*Directory: (\S*).*stderr.txt:\s*(.*)\s*stdout.txt:\s*(.*)\s*----\s*
+Caused by:\s*
+(.*)
+->
+Application "\1" failed (\7)\n
+\tArguments: "\2"\n\tHost: \3\n\tDirectory: \4\n\tSTDERR: \5\n\tSTDOUT: \6\n
 ;
 
 
