added kickstart prop
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@342 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/etc/swift.properties
+++ b/etc/swift.properties
@@ -70,6 +70,21 @@ clustering.queue.delay=4
 #
 clustering.min.time=60
 
+#
+# Kickstart is a useful tool that can be used to gather various information
+# about a remote process. Before it can be used it must be installed on the
+# remote site and the corresponding entry be set in the sites file.
+# This option allows controlling of how Swift uses Kickstart. The following
+# values are possible:
+# false - do not use Kickstart
+# true  - use Kickstart. If a job is scheduled on a site that does not have
+#       Kickstart installed, that job will fail.
+# maybe - Use Kickstart if installed (i.e. the entry is present in the sites
+#       file) 
+#
+
+kickstart.enabled=true
+
 ###########################################################################
 #                          Throttling options                             #
 ###########################################################################
