added option to control when kickstart stuff is transfered
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@349 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/etc/swift.properties
+++ b/etc/swift.properties
@@ -83,7 +83,16 @@ clustering.min.time=60
 #       file) 
 #
 
-kickstart.enabled=true
+kickstart.enabled=maybe
+
+#
+# Indicates when Kickstart records should be fetched from the remote site:
+# true	- always transfer Kickstart records if Kickstart was used (see
+#		kickstart.enabled)
+# false	- only transfer Kickstart records if the job fails
+#
+
+kickstart.always.transfer=false
 
 ###########################################################################
 #                          Throttling options                             #
