use my log4j.properties
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@358 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/build.xml
+++ b/build.xml
@@ -95,6 +95,9 @@
 		<copy todir="${dist.dir}/etc" 
 			file="${cog.dir}/modules/${module.name}/etc/karajan.properties" 
 			overwrite="true"/>
+		<copy todir="${dist.dir}/etc" 
+			file="${cog.dir}/modules/${module.name}/etc/log4j.properties" 
+			overwrite="true"/>
 		<replace file="${dist.dir}/bin/swift">
 			<replacetoken>updateOptions "$COG_INSTALL_PATH" "COG_INSTALL_PATH"
 
