--- a/etc/swift.properties
+++ b/etc/swift.properties
@@ -12,6 +12,8 @@ tc.file=${vds.home}/var/tc.data
 #		that are related to the Swift implementation (should such 
 #		errors occur) will still be reported eagerly.
 #
+# Default: true
+#
 lazy.errors=true
 
 #
@@ -19,6 +21,8 @@ lazy.errors=true
 # files to purge) is the only implementation right now. One can set
 # a target size for a host by using the VDL2::storagesize profile
 # for a host in sites.xml
+#
+# Default: LRU
 #
 caching.algorithm=LRU
 
@@ -28,17 +32,23 @@ caching.algorithm=LRU
 # false      - do not generate a provenance graph 
 # <filename> - generate a provenange graph in the give file name
 #
+# Default: true
+#
 pgraph=true
 
 
 #
 # graph properties for the provenance graph (.dot specific) 
 #
+# Default: splines="compound", rankdir="TB"
+#
 pgraph.graph.options=splines="compound", rankdir="TB"
 
 
 #
 # node properties for the provenance graph (.dot specific) 
+#
+# Default: color="seagreen", style="filled"
 #
 pgraph.node.options=color="seagreen", style="filled"
 
@@ -57,16 +67,22 @@ pgraph.node.options=color="seagreen", style="filled"
 #       variable). 
 # false	- clustering of small jobs is disabled.
 #
+# Default: true
+#
 clustering.enabled=true
 
 
 #
 # <seconds>	- the intervals at which the clustering queue is processed
 #
+# Default: 4
+#
 clustering.queue.delay=4
 
 #
 # <seconds>	- the threshold time for clustering
+#
+# Default: 60
 #
 clustering.min.time=60
 
@@ -82,6 +98,8 @@ clustering.min.time=60
 # maybe - Use Kickstart if installed (i.e. the entry is present in the sites
 #       file) 
 #
+# Default: maybe
+#
 
 kickstart.enabled=maybe
 
@@ -90,6 +108,8 @@ kickstart.enabled=maybe
 # true	- always transfer Kickstart records if Kickstart was used (see
 #		kickstart.enabled)
 # false	- only transfer Kickstart records if the job fails
+#
+# Default: false
 #
 
 kickstart.always.transfer=false
@@ -107,6 +127,8 @@ kickstart.always.transfer=false
 # concurrent submissions can overload either or both the submit host CPU
 # and the remote host/head node causing degraded performance.    
 #
+# Default: 4
+#
 throttle.submit=4
 
 #
@@ -114,6 +136,8 @@ throttle.submit=4
 # try to send jobs to. In other words it guarantees that no more than the 
 # value of this throttle jobs sent to any site will be concurrently in a state
 # of being submitted.
+#
+# Default: 2
 #
 throttle.host.submit=2
 
@@ -123,6 +147,8 @@ throttle.host.submit=2
 # given time. File transfers consume bandwidth. Too many concurrent transfers
 # can cause the network to be overloaded preventing various other signalling
 # traffic from flowing properly.
+#
+# Default: 4
 #
 throttle.transfers=4
 
@@ -134,4 +160,6 @@ throttle.transfers=4
 # file operations causes Swift to use a small number of cached connections and
 # achieve better overall performance. 
 # 
+# Default: 8
+#
 throttle.file.operations=8
