--- a/etc/log4j.properties
+++ b/etc/log4j.properties
@@ -14,3 +14,5 @@ log4j.appender.FILE.layout.ConversionPattern=%d{ISO8601} %-5p %c{1} %m%n
 log4j.logger.swift=DEBUG
 
 log4j.logger.org.griphyn.vdl.karajan.Loader=DEBUG
+log4j.logger.org.griphyn.vdl.toolkit.VDLt2VDLx=DEBUG
+
