local provider built by default
git-svn-id: https://svn.code.sf.net/p/cogkit/svn/trunk/current/src@1584 5b74d2a0-fa0e-0410-85ed-ffba77ec0bde

--- a/cog/modules/provider-local/build.xml
+++ b/cog/modules/provider-local/build.xml
@@ -55,7 +55,7 @@
     <!-- | Dist                                                            | -->
     <!-- \_________________________________________________________________/ -->
 	
-	<target name="dist" unless="no.providers">
+	<target name="dist">
 		<ant antfile="${main.buildfile}" target="dist"/>
 	</target>
 
