whitespace fix in error message
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@438 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/etc/error.properties
+++ b/etc/error.properties
@@ -12,8 +12,7 @@ Could not find any valid host for task .*
 with constraints \{trfqn=(.*), tr=(.*)\}.*
 ->
 The requested application (\2) cannot be found installed on any of the sites.\n  
-You should check your tc.data and sites.xml files, and make sure that the name (\2) is
-not misspelled.
+You should check your tc.data and sites.xml files, and make sure that the name (\2) is not misspelled.
 ;
 
 Exception in (\S*):.*
