swiftification; added ip.address
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@457 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/etc/swift.properties
+++ b/etc/swift.properties
@@ -1,6 +1,19 @@
-sites.file=${vds.home}/etc/sites.xml
-tc.file=${vds.home}/var/tc.data
+sites.file=${swift.home}/etc/sites.xml
+tc.file=${swift.home}/etc/tc.data
 
+#
+# The IP address of the submit machine is used by GRAM as a callback
+# address to report the status of submitted jobs. In general, Swift
+# can automatically detect the IP address of the local machine. 
+# However, if the machine has more than one network interface, Swift
+# will pick the first one, which may not be the right choice. It is
+# recommended that this property is set properly before attempting to
+# run jobs through GRAM.
+# Format:
+#    ip.address=x.y.z.w
+#
+
+#ip.address=127.0.0.1
 
 #
 # false	- means an error will be immediately reported and cause the
@@ -19,8 +32,8 @@ lazy.errors=true
 #
 # What algorithm to use for caching of remote files. LRU (as in what
 # files to purge) is the only implementation right now. One can set
-# a target size for a host by using the VDL2::storagesize profile
-# for a host in sites.xml
+# a target size (in bytes) for a host by using the swift:storagesize 
+# profile for a host in sites.xml
 #
 # Default: LRU
 #
