--- a/etc/log4j.properties
+++ b/etc/log4j.properties
@@ -15,4 +15,4 @@ log4j.logger.swift=DEBUG
 
 log4j.logger.org.griphyn.vdl.karajan.Loader=DEBUG
 log4j.logger.org.griphyn.vdl.toolkit.VDLt2VDLx=DEBUG
-
+log4j.logger.org.griphyn.vdl.karajan.VDL2ExecutionContext=DEBUG
